# Intern-computer-vision

./: README.md
2D/: 2dtransform.cpp  CMakeLists.txt  README.md
Cmake/: README.md
Cmake/simple_cmake_example/: CMakeLists.txt  main.cpp
Cmake/simple_makefile_example/: a.out  main.cpp  makefile  message.cpp  message.h
Colorspaces/: CMakeLists.txt  README.md  colorspace.cpp
camera_matrix/: 3D.cpp  README.md
dsa/: contains_duplicates.py  two_sum.py  valid_anagram.py
edgedetection/: CMakeLists.txt  README.md  edge.cpp
face_attribute/: README.md  face_attribute.ipynb  face_attributemobilnet.ipynb  facee.ipynb
linedetection/: CMakeLists.txt  README.md  line.cpp
numpy_basics/: README.md  numpy.ipynb
pandas/: README.md  pandadata.ipynb  pandas.ipynb
regression/: prtce.ipynb
square_grid/: README.md  prtce1.ipynb  prtce2.ipynb  square_grid_main.py
svd/: prtce1.ipynb  prtce2.ipynb
