cmake_minimum_required(VERSION 3.20)

project(practicecmake)

# add_library(<library-name> <library>)

add_executable(main main.cpp)

# target_link_library(<executable-filename> MODE <library-name>)

# target_include_directories(<executable-filename> MODE <path>)

# include_directories(<path>)

# find_package(<pkg-name>)

# set(<variable-name> variable)


# \\for conditions
# if()  
# endif() 

# while()
# endwhile()
